+ Fixed long card property names being cut off

--- a/src/app/builder/components/BuilderComponent.less
+++ b/src/app/builder/components/BuilderComponent.less
@@ -61,10 +61,10 @@
 }
 
 .builder-label {
-  width: 58px;
+  min-width: 58px;
   position: relative;
   top: 4px;
-  text-align: center;
+  text-align: left;
 }
 
 .filters-single {
